<resources>
    <string name="app_name">生活圈</string>
    <string name="loading">请稍候</string>
    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="download">下载中心</string>
    <string name="search">搜索</string>
    <!-- 共享过度动画 -->
    <string name="transition_photos">transition_animation_news_photos</string>
    <string name="channel_manage">频道管理</string>
    <string name="my_channel">我的频道       长按并拖拽可排序</string>
    <string name="more_channel">更多频道       点击添加</string>
    <string name="reload">重新尝试</string>
    <string name="empty">还没有数据</string>
    <string name="news_from">%1$s %2$s</string>

    <!-- login -->
    <string name="login">登录</string>
    <string name="login_account">登录名</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码？</string>


    <!-- register -->
    <string name="register">注册</string>
    <string name="account">用户名</string>
    <string name="email">邮箱</string>
    <string name="enter_psd">确认密码</string>
    <string name="sex">性别</string>
    <string name="brithday">生日</string>
    <string name="address">住址</string>
    <string name="id_card">证件号</string>
    <string name="real_name">真实姓名</string>


    <!-- 主页 -->
    <string name="no_data">暂无数据</string>
    <string name="credit">信用值</string>
    <string name="add_time">上架时间</string>
    <string name="price">价格</string>

    <!-- 订单 -->
    <string name="order_number">订单单号:</string>
    <string name="order_time">订单时间:</string>
    <string name="order_price">订单金额:</string>
    <string name="order_name">订单名称:</string>
    <string name="order_status">订单状态:</string>
    <string name="order_distribution">订单发货:</string>
    <string name="sure_ship">确认\n发货</string>
    <string name="ship_title">确认发货</string>
    <string name="sure_receipt">确认\n收货</string>
    <string name="sure">是的，我想好了</string>
    <string name="cancel">容我再想想</string>
    <string name="ship_tip">请确认您已经将资源发货后再确认发货！</string>

    <!-- 商品详情 -->
    <string name="resource_msg">资源详情</string>
    <string name="resource_time">上架时间:</string>
    <string name="resource_price">资源价格:</string>
    <string name="resource_credit">需要信用值:</string>
    <string name="resource_user_name">发布人:</string>
    <string name="resource_order">下单</string>
    <string name="resource_name">资源名称</string>
    <string name="resource_type">资源类别</string>
    <string name="resource_setup">发布资源</string>
    <string name="collection_resource">收藏</string>

    <!-- 通告 -->
    <string name="notice_comment">评论列表:</string>
    <string name="push_comment">发布评论</string>
    <string name="my_comment">我的精彩评论</string>


    <!-- 用户 -->

    <string name="user_pic">头像</string>
    <string name="user_name">用户名</string>
    <string name="set_up">发布新资源</string>
    <string name="down">完成</string>
</resources>
