<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/hint_20x"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_msg"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/hint_3x"
            android:layout_gravity="center"
            android:background="@drawable/public_shape_dialog"
            android:gravity="center"
            android:text="@string/ship_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_10px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black" />
        <TextView
            android:id="@+id/dialog_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ship_tip"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_8px"
            android:gravity="center"
            android:padding="@dimen/hint"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hint_4x"
            android:orientation="horizontal">

            <Button
                android:id="@+id/remove_sure"
                android:layout_width="0dp"
                android:layout_height="@dimen/hint_4x"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/public_shape_dialog"
                android:gravity="center"
                android:text="@string/sure"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_8px" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:background="@color/black"></View>

            <Button
                android:id="@+id/remove_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/hint_4x"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/public_shape_dialog"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_8px" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
