<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView app:cardBackgroundColor="@color/white"
    android:id="@+id/notice_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/hint"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <RelativeLayout
        android:layout_width="@dimen/hint_12x"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/order_img"
            android:layout_width="@dimen/hint_10x"
            android:layout_height="@dimen/hint_10x"
            android:layout_centerInParent="true"
            android:paddingBottom="1dp"
            android:paddingTop="1dp"
            android:src="@mipmap/black_ftuit" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hint_2x"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hint_2x"
                android:gravity="center"
                android:text="@string/order_number"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_4px" />

            <TextView
                android:id="@+id/order_number"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hint_2x"
                android:gravity="center_vertical"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_4px" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_single_source_system"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hint_2x"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hint_2x"
                android:gravity="center"
                android:text="@string/order_time"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_4px" />

            <TextView
                android:id="@+id/order_time"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hint_2x"
                android:gravity="center_vertical"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_4px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hint_2x"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hint_2x"
                android:gravity="center"
                android:text="@string/order_name"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_4px" />

            <TextView
                android:id="@+id/order_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hint_2x"
                android:gravity="center_vertical"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_4px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hint_2x"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hint_2x"
                android:gravity="center"
                android:text="@string/order_price"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_4px" />

            <TextView
                android:id="@+id/order_price"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hint_2x"
                android:gravity="center_vertical"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_4px" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hint_2x"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hint_2x"
                android:gravity="center"
                android:text="@string/order_distribution"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_4px" />

            <TextView
                android:id="@+id/order_distribution"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hint_2x"
                android:gravity="center_vertical"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_4px" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hint_2x"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hint_2x"
                android:gravity="center"
                android:text="@string/order_status"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_4px" />

            <TextView
                android:id="@+id/order_status"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hint_2x"
                android:gravity="center_vertical"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_4px" />
        </LinearLayout>

    </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/hint_3x"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:id="@+id/order_sure"
            android:layout_width="@dimen/hint_3x"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/sure_ship"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_5px"
            android:gravity="center"/>
        <ImageView
            android:id="@+id/order_delete"
            android:layout_width="@dimen/hint_3x"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/hint"
            android:src="@mipmap/delete"
            android:background="#FFCC33"/>
        </LinearLayout>
</LinearLayout>
</android.support.v7.widget.CardView>